--- a/p8105_hw1_yz3956.md
+++ b/p8105_hw1_yz3956.md
@@ -38,13 +38,13 @@ Take the mean of each variable in my data frame
 mean(pull(prob1_df, samp))
 ```
 
-    ## [1] 0.5901445
+    ## [1] 0.2184634
 
 ``` r
 mean(pull(prob1_df, samp_gt_0))
 ```
 
-    ## [1] 0.8
+    ## [1] 0.5
 
 ``` r
 mean(pull(prob1_df, char_vec))
@@ -70,14 +70,14 @@ I can take the mean of numbers and logic but not character or factor.
 as.numeric(pull(prob1_df, samp))
 ```
 
-    ##  [1]  0.79909455  1.25297432  0.16462031  0.01078831  0.18625126  2.21822218
-    ##  [7] -1.64060686  0.72730212  2.54458087 -0.36178222
+    ##  [1] -0.07847705  2.01297647  0.40151845  0.75619579 -0.51910672 -0.33820060
+    ##  [7] -1.40420168  0.86318685  1.02185499 -0.53111261
 
 ``` r
 as.numeric(pull(prob1_df, samp_gt_0))
 ```
 
-    ##  [1] 1 1 1 1 1 1 0 1 1 0
+    ##  [1] 0 1 1 1 0 0 0 1 1 0
 
 ``` r
 as.numeric(pull(prob1_df, char_vec))
@@ -97,8 +97,8 @@ as.numeric(pull(prob1_df, factor_vec))
 as.numeric(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 ```
 
-    ##  [1] 0.79909455 1.25297432 0.16462031 0.01078831 0.18625126 2.21822218
-    ##  [7] 0.00000000 0.72730212 2.54458087 0.00000000
+    ##  [1] 0.0000000 2.0129765 0.4015184 0.7561958 0.0000000 0.0000000 0.0000000
+    ##  [8] 0.8631869 1.0218550 0.0000000
 
 ``` r
 as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
@@ -113,5 +113,67 @@ as.factor(pull(prob1_df, samp_gt_0)) * pull(prob1_df, samp)
 as.numeric(as.factor(pull(prob1_df, samp_gt_0))) * pull(prob1_df, samp)
 ```
 
-    ##  [1]  1.59818910  2.50594865  0.32924061  0.02157663  0.37250251  4.43644435
-    ##  [7] -1.64060686  1.45460424  5.08916173 -0.36178222
+    ##  [1] -0.07847705  4.02595294  0.80303690  1.51239157 -0.51910672 -0.33820060
+    ##  [7] -1.40420168  1.72637370  2.04370998 -0.53111261
+
+## Problem 2
+
+Download the package containing the penguins dataset
+
+install.packages(“palmerpenguins”)
+
+Load the penguins dataset:
+
+``` r
+data("penguins", package = "palmerpenguins")
+```
+
+Description of the penguins dataset:
+
+There are 5 numeric variables, which are bill\_length\_mm,
+bill\_depth\_mm, flipper\_length\_mm, body\_mass\_g and year, and 3
+factors, which are species, island and sex.
+
+The mean of the bill\_length\_mm is 43.9219298.
+
+The mean of the bill\_depth\_mm) is 17.1511696.
+
+The mean of the flipper\_length\_mm is 200.9152047.
+
+The mean of the body\_mass\_g is 4201.754386.
+
+The mean of the year is 2008.0290698.
+
+The range of the bill\_length\_mm is 32.1, 59.6.
+
+The range of the bill\_depth\_mm is 13.1, 21.5.
+
+The range of the flipper\_length\_mm is 172, 231.
+
+The range of the body\_mass\_g is 2700, 6300.
+
+The range of the year is 2007, 2009.
+
+The size of the dataset is 344 \* 8.
+
+The value of the species is Adelie, Chinstrap, Gentoo.
+
+The value of the island is Biscoe, Dream, Torgersen.
+
+The value of the sex is female, male.
+
+The scatter plot of flipper\_length\_mm (y) vs bill\_length\_mm (x)
+
+``` r
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8105_hw1_yz3956_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+
+``` r
+ggsave("scatter_plot.pdf", height = 4, width = 6)
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
